samples/_failures_safe/1761264392_7fdb10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8c442c94.c: In function ‘main’:
./samples/SAFE/__tmp_8c442c94.c:146:16: error: missing terminating " character
  146 |         printf("No valid words found in
      |                ^~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8c442c94.c:146:9: error: expected expression at end of input
  146 |         printf("No valid words found in
      |         ^~~~~~
./samples/SAFE/__tmp_8c442c94.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8c442c94.c:146:9: error: expected declaration or statement at end of input
